[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-client"
version = "1.0.0"
description = "A library to interface with TodaQ Twins"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["todaq", "twin"]
authors = [{ name = "TodaQ", email = "engineering@todaq.net" }]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["requests"]

[project.urls]
"Homepage" = "https://github.com/TODAQopen/twin-client/tree/master/twin-client-py"
